# Data-approximation

./: flux for2.txt  flux for8.txt  inaccuracy in flux for2.txt  inaccuracy in position of core for.txt  my_project_new.ipynb  my_project_new.py  position of core for2.txt  position of core for8.txt  pyproject.toml  setup.cfg  test_starter.py  time.txt
env/: pyvenv.cfg
jetproj/: __init__.py  fitting_master.py  jetmodel.py  starter.py
jetproj.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pip-wheel-metadata/jetproj.dist-info/: METADATA  top_level.txt
