 
[metadata]
name = jetproj
version = 1.0
author = Rustam Ishmukhametov
author_email = 'maminastronom@gmail.ru'
description = Simulation of jet and fitting data
long_description = file: README.md
url = 'without'
license = MIT
keywords = science, astrophysics
classifiers = 
        Intended Audience :: Science/Research
        Intended Audience :: Education
        License :: OSI Approved :: MIT License
        Topic :: Education
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
install_requires =
    numpy>=1.13
    scipy>=1.0
    matplotlib>=2.0
    emcee>=3.0
    astropy
    



[options.entry_points]
console_scripts =
	#starter = jetproj.starter:main
	fitting_master = jetproj.fitting_master:main
	

[options.packages.find]
exclude =
    test
